<resources>
    <string name="app_name">TestAI-TX2</string>
    <string name="title_activity_add_entry">AddEntryActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_entry">New Entry</string>
    <string name="name">Name:</string>
    <string name="content">Content:</string>
    <string name="image">Image:</string>
    <string name="parent_key">Parent Key:</string>
    <string name="rank">Rank:</string>
    <string name="keywords">Keywords:</string>
</resources>
