<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mac.training.testai_tx2.AddEntryActivity"
    tools:showIn="@layout/activity_add_entry"
    android:orientation="vertical">


    <TextView
        android:text="@string/new_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="25sp"
        />



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <AutoCompleteTextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <AutoCompleteTextView
            android:id="@+id/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <AutoCompleteTextView
            android:id="@+id/Img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <AutoCompleteTextView
            android:id="@+id/ParentKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parent_key"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <AutoCompleteTextView
            android:id="@+id/Rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rank"
            android:inputType="number"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <AutoCompleteTextView
            android:id="@+id/KW1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keywords"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>



        <AutoCompleteTextView
            android:id="@+id/KW2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="15dp"/>

        <AutoCompleteTextView
            android:id="@+id/KW3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="15dp"/>

        <AutoCompleteTextView
            android:id="@+id/KW4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="15dp"/>


</LinearLayout>
